# C8EMU

./: CMakeLists.txt
include/: Chip8.hpp
src/: Chip8.cpp  main.cpp
